Stack org contact details for mobile to avoid overflow

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -250,11 +250,13 @@ blockquote {
   display: flex;
   justify-content: space-between;
   border-bottom: 1px solid var(--color-org-devider);
+  align-items: baseline;
 }
 
 @media screen and (max-width: $width-small) {
   .org__contact__method {
     padding: 0;
+    flex-direction: column;
   }
 }
 
